package code.observer.after;

public interface Observer {
    void update(float temperature, float pressure, float humidity);
}
